Task5/non-admin-api-allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-backend
spec:
  podSelector:
    matchLabels:
      role: back-end-api
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: front-end
  egress:
  - to:
    - podSelector:
        matchLabels:
          role: front-end
  policyTypes:
  - Ingress
  - Egress

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-admin-frontend-to-admin-backend
spec:
  podSelector:
    matchLabels:
      role: admin-back-end-api
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: admin-front-end
  egress:
  - to:
    - podSelector:
        matchLabels:
          role: admin-front-end
  policyTypes:
  - Ingress
  - Egress
